k8s/zcp-console-menu-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zcp-console-menu-deploy
  namespace: ayoung
spec:
  selector:
    matchLabels:
      app: zcp-console-menu

  replicas: 1
  template:
    metadata:
      labels:
        app: zcp-console-menu
    spec:
      containers:
        - name: zcp-console-menu
          image: lay126/zcp-console-menu:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: zcp-console-menu-cm
